--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Personal Website</title>
+     <title>lrc's web</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello, World!</h1>
+    <ul>
+        <li><a href="japan.html">japan</a></li>
+        <li><a href="euo.html">euo</a></li>
+        <li><a href="flowers.html">flowers</a></li>
+        <li><a href="domestic.html">domestic</a></li>   
+    </ul>
+    <img src="images/1.jpg" alt="Intro">
 </body>
 </html>
