--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html>
 <head>
      <title>lrc's web</title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <ul>
+    <ul class="link-list">
         <li><a href="japan.html">japan</a></li>
         <li><a href="euo.html">euo</a></li>
-        <li><a href="flowers.html">flowers</a></li>
-        <li><a href="domestic.html">domestic</a></li>   
+        <li><a href="tanhua.html">flowers</a></li>
+        <li><a href="domestic.html">domestic</a></li>
     </ul>
-    <img src="images/1.jpg" alt="Intro">
+    <div class="image-container">
+        <img src="images/1.jpg" alt="Intro" class="full-screen-image">
+    </div>
 </body>
 </html>
