--- a/tanhua.html
+++ b/tanhua.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>日本</title>        
+        <title>探花</title>        
     </head>
     <body>
-        <h1>Japan</h1>
+        <h1>探花</h1>
         <ul class="link-list">
             <li><a href="japan.html">japan</a></li>
             <li><a href="euo.html">euo</a></li>
