--- a/euo.html
+++ b/euo.html
@@ -6,10 +6,9 @@
     <body>
         <h1>欧美</h1>
         <ul class="link-list">
-            <li><a href="japan.html">japan</a></li>
-            <li><a href="euo.html">euo</a></li>
-            <li><a href="tanhua.html">flowers</a></li>
-            <li><a href="domestic.html">domestic</a></li>
+            <li><a href="https://www.miliav.com/video/347925.html">黑丝大长腿洋马</a></li>
+            <li><a href="https://www.miliav.com/video/333543.html">大长腿东欧妹妹</a></li>
+            <li><a href="https://www.miliav.com/video/271055.html">lena anderson</a></li>
         </ul>
     </body>
 </html>
