--- a/japan.html
+++ b/japan.html
@@ -6,10 +6,10 @@
     <body>
         <h1>Japan</h1>
         <ul class="link-list">
-            <li><a href="japan.html">japan</a></li>
-            <li><a href="euo.html">euo</a></li>
-            <li><a href="tanhua.html">flowers</a></li>
-            <li><a href="domestic.html">domestic</a></li>
+            <li><a href="https://thisav.com/sone-228-uncensored-leak">河北彩花-地铁</a></li>
+            <li><a href="https://thisav.com/dm53/ipx-934-uncensored-leak">桃子-旅行篇</a></li>
+            <li><a href="https://missav.com/dm64/ssis-816-uncensored-leak">大乱交</a></li>
+            <li><a href="https://thisav.com/dm62/ipz-904">桃子-突然性</a></li>
         </ul>
     </body>
 </html>
