--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul class="link-list">
         <li><a href="japan.html">japan</a></li>
         <li><a href="euo.html">euo</a></li>
-        <li><a href="tanhua.html">flowers</a></li>
+        <li><a href="tanhua.html">tanhua</a></li>
         <li><a href="domestic.html">domestic</a></li>
     </ul>
     <div class="image-container">
